# mcp-openshift-installer-checker

./: .env.example  LICENSE  README.md  main.py  pyproject.toml
extract_requirements/: cluster_scanner.py  extractor.py  feasibility_checker.py  git_handler.py
extract_requirements/models/: requirements.py
extract_requirements/parser/: yaml_parser.py
extract_requirements/utils/: __init__.py  resource_comparisons.py
src/cluster_analyzer/: __init__.py  scanner.py
src/cluster_checker/: __init__.py  feasibility.py
src/requirements_extractor/: extractor.py  git_handler.py
src/requirements_extractor/models/: requirements.py
src/requirements_extractor/parser/: yaml_parser.py
src/requirements_extractor/utils/: resource_comparisons.py
test/: GPU_VALIDATION_SUMMARY.md  failed_attempt.md  successful_attempt.md  test_command_injection_protection.py  test_crd_detection.py  test_extraction.py  test_gpu_model_validation.py  test_usage_tracking.py
